Added {CHANNEL,QUERY}_CLOSED action event
git-svn-id: http://svn.dmdirc.com/trunk@1130 00569f92-eb28-0410-84fd-f71c24880f43